--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "dayjs": "^1.10.7",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
+    "lodash": "^4.17.21",
     "miragejs": "^0.1.41",
     "mockman-js": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2",
