--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^9.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
